<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <view
        android:id="@+id/recycler_view"
        class="android.support.v7.widget.RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@+id/toolbar" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:id="@+id/img_no_records"
            android:src="@drawable/nodata"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:contentDescription="@string/nodataimg"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:id="@+id/img_no_conex"
            android:src="@drawable/nointernet"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:contentDescription="@string/nointernetimg"
            android:layout_centerHorizontal="true"/>

    <android.support.design.widget.FloatingActionButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/page_back_arrow"
        android:id="@+id/btn_regresar_detail"
        app:backgroundTint="@color/termsandconditionstext"
        app:borderWidth="0dp"
        app:elevation="1dp"
        android:layout_alignBottom="@+id/recycler_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adBannerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        android:contentDescription="@string/bannerpubend"
        ads:adUnitId="@string/adbanner">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>