<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textoBusquedaFaq"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:text="@string/textoBusquedaFaq"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/organicsearch"
        android:id="@+id/imgSearchFaq"
        android:layout_weight="1"
        android:layout_gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textoUsosFaq"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:text="@string/textoInformacion"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/faqcartoon"
        android:layout_gravity="right"
        android:layout_weight="1"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textoFacebookCommentFaq"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/textoFacebookCommentsFaq" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook_comments"
            android:layout_gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textoReferenciasFaq"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:text="@string/textoReferencias" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/greenbook"
            android:layout_gravity="right"
            android:layout_weight="1"/>
        </LinearLayout>

</LinearLayout>
</ScrollView>